[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currency-converter-wolf-skullcave"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wolf_skullcave", email = "7805222+wolfSkullCave@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer", 
  "beautifulsoup4",
]

[project.urls]
Documentation = "https://github.com/wolf_skullcave-Laptop/currency-converter-wolf-skullcave#readme"
Issues = "https://github.com/wolf_skullcave-Laptop/currency-converter-wolf-skullcave/issues"
Source = "https://github.com/wolf_skullcave-Laptop/currency-converter-wolf-skullcave"

[project.scripts]
currency = "currency_converter_wolf_skullcave.currency:app"

[tool.hatch.version]
path = "src/currency_converter_wolf_skullcave/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/currency_converter_wolf_skullcave tests}"

[tool.coverage.run]
source_pkgs = ["currency_converter_wolf_skullcave", "tests"]
branch = true
parallel = true
omit = [
  "src/currency_converter_wolf_skullcave/__about__.py",
]

[tool.coverage.paths]
currency_converter_wolf_skullcave = ["src/currency_converter_wolf_skullcave", "*/currency-converter-wolf-skullcave/src/currency_converter_wolf_skullcave"]
tests = ["tests", "*/currency-converter-wolf-skullcave/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
